feat: invoicing page