@@ -1,13 +1,9 @@
 package cars.carbon.printService.production.cutting.service;
 
 import cars.carbon.printService.enums.PlateEventType;
-import cars.carbon.printService.enums.PlateStatus;
 import cars.carbon.printService.model.plate.PlateEvent;
 import cars.carbon.printService.model.plate.Plates;
-import cars.carbon.printService.production.cutting.dto.CuttingRecordRequestDTO;
-import cars.carbon.printService.production.cutting.dto.CuttingRecordResponseDTO;
-import cars.carbon.printService.production.cutting.dto.PlateConsumptionRequestDTO;
-import cars.carbon.printService.production.cutting.dto.PlateConsumptionResponseDTO;
+import cars.carbon.printService.production.cutting.dto.*;
 import cars.carbon.printService.production.cutting.enums.MaterialType;
 import cars.carbon.printService.production.cutting.enums.SupplierType;
 import cars.carbon.printService.production.cutting.exceptions.BusinessException;
@@ -16,8 +12,12 @@ import cars.carbon.printService.production.cutting.model.CuttingRecord;
 import cars.carbon.printService.production.cutting.model.PlateConsumption;
 import cars.carbon.printService.production.cutting.repository.CuttingRecordRepository;
 import cars.carbon.printService.production.cutting.repository.PlateConsumptionRepository;
+import cars.carbon.printService.production.invoice.repository.PlateConsumptionInvoiceRepository;
 import cars.carbon.printService.repository.PlateEventRepository;
 import cars.carbon.printService.repository.PlateRepository;
+import cars.carbon.printService.production.invoice.model.PlateConsumptionInvoice;
+import cars.carbon.printService.production.invoice.dto.InvoiceItemDTO;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -35,6 +35,9 @@ public class CuttingRecordService {
     private final PlateConsumptionRepository plateConsumptionRepository;
     private final PlateRepository plateRepository;
     private final PlateEventRepository plateEventRepository;
+    private final PlateConsumptionInvoiceRepository plateConsumptionInvoiceRepository;
+
+    // ================= CREATE =================
 
     @Transactional
     public CuttingRecordResponseDTO createCuttingRecord(
@@ -98,6 +101,8 @@ public class CuttingRecordService {
         return mapToResponseDTO(savedRecord);
     }
 
+    // ================= VALIDATION =================
+
     private void validateConsumption(
             PlateConsumptionRequestDTO request,
             MaterialType material
@@ -121,10 +126,6 @@ public class CuttingRecordService {
                                     )
                             );
 
-            request.setBatchNumber(
-                    plate.getWorkorderid().getLote()
-            );
-
             request.setLayerQuantity(
                     String.valueOf(plate.getLayers())
             );
@@ -143,38 +144,26 @@ public class CuttingRecordService {
         }
     }
 
+    // ================= CREATE CONSUMPTION =================
+
     private PlateConsumption createPlateConsumption(
             PlateConsumptionRequestDTO request,
             CuttingRecord cuttingRecord
     ){
 
         PlateConsumption consumption = new PlateConsumption();
-        consumption.setInvoiceNumber(
-                request.getInvoiceNumber()
-        );
-        consumption.setBatchNumber(
-                request.getBatchNumber()
-        );
-        consumption.setUsedMetrage(
-                request.getUsedMetrage()
-        );
+
+        consumption.setUsedMetrage(request.getUsedMetrage());
         consumption.setSupplier(request.getSupplier());
-        consumption.setLayerQuantity(
-                request.getLayerQuantity()
-        );
+        consumption.setLayerQuantity(request.getLayerQuantity());
+        consumption.setBatchNumber(request.getBatchNumber());
 
         consumption.setManualBatch(
-
                 request.getSupplier() != SupplierType.OPERA ||
-
-                        cuttingRecord.getMaterial()
-                                != MaterialType.ARAMIDA
+                        cuttingRecord.getMaterial() != MaterialType.ARAMIDA
         );
 
-        consumption.setCuttingRecord(
-                cuttingRecord
-        );
-
+        consumption.setCuttingRecord(cuttingRecord);
         if(request.getSupplier() == SupplierType.OPERA &&
                 cuttingRecord.getMaterial() == MaterialType.ARAMIDA &&
                 request.getPlateId() != null){
@@ -189,6 +178,8 @@ public class CuttingRecordService {
 
         return plateConsumptionRepository.save(consumption);
     }
+
+    // ================= PLATE EVENT =================
 
     private void createPlateEvent(
             PlateConsumptionRequestDTO request,
@@ -207,17 +198,9 @@ public class CuttingRecordService {
 
         PlateEvent event = new PlateEvent();
         event.setPlate(plate);
-        event.setEventType(
-                PlateEventType.USO_CORTE
-        );
-
-        event.setEventDate(
-                LocalDateTime.now()
-        );
-
-        event.setConsumedArea(
-                request.getUsedMetrage().doubleValue()
-        );
+        event.setEventType(PlateEventType.USO_CORTE);
+        event.setEventDate(LocalDateTime.now());
+        event.setConsumedArea(request.getUsedMetrage().doubleValue());
 
         event.setDescription(
                 "Consumo em corte - Apontamento: "
@@ -226,9 +209,7 @@ public class CuttingRecordService {
                         + consumption.getId()
         );
 
-        event.setConsumptionReferenceId(
-                consumption.getId()
-        );
+        event.setConsumptionReferenceId(consumption.getId());
 
         plateEventRepository.save(event);
 
@@ -241,12 +222,37 @@ public class CuttingRecordService {
         plateRepository.save(plate);
     }
 
+    // ================= GET =================
+
     public List<CuttingRecordResponseDTO> getAllCuttingRecords(){
 
-        return cuttingRecordRepository.findAll()
-                .stream()
+        List<CuttingRecord> records =
+                cuttingRecordRepository.findAllWithConsumptions();
+
+        List<Long> consumptionIds = records.stream()
+                .flatMap(r -> r.getConsumptions().stream())
+                .map(PlateConsumption::getId)
+                .toList();
+
+        List<PlateConsumptionInvoice> invoices =
+                plateConsumptionInvoiceRepository.findByConsumptionIds(consumptionIds);
+
+        var grouped = invoices.stream()
+                .collect(Collectors.groupingBy(
+                        i -> i.getPlateConsumption().getId()
+                ));
+
+        for (CuttingRecord record : records) {
+            for (PlateConsumption c : record.getConsumptions()) {
+                c.setInvoices(
+                        grouped.getOrDefault(c.getId(), List.of())
+                );
+            }
+        }
+
+        return records.stream()
                 .map(this::mapToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public CuttingRecordResponseDTO getCuttingRecordById(Long id){
@@ -255,13 +261,14 @@ public class CuttingRecordService {
                 cuttingRecordRepository.findById(id)
                         .orElseThrow(() ->
                                 new ResourceNotFoundException(
-                                        "Cutting record not found with id: "
-                                                + id
+                                        "Cutting record not found with id: " + id
                                 )
                         );
 
         return mapToResponseDTO(record);
     }
+
+    // ================= MAPPERS =================
 
     private CuttingRecordResponseDTO mapToResponseDTO(
             CuttingRecord record){
@@ -277,15 +284,15 @@ public class CuttingRecordService {
         dto.setMaterial(record.getMaterial());
         dto.setKitType(record.getKitType());
         dto.setSeal(record.getSeal());
-        List<PlateConsumptionResponseDTO>
-                consumptionDTOs =
 
+        List<PlateConsumptionResponseDTO> consumptionDTOs =
                 record.getConsumptions()
                         .stream()
                         .map(this::mapToResponseDTO)
                         .collect(Collectors.toList());
 
         dto.setConsumptions(consumptionDTOs);
+
         return dto;
     }
 
@@ -296,47 +303,43 @@ public class CuttingRecordService {
                 new PlateConsumptionResponseDTO();
 
         dto.setId(consumption.getId());
-
-        dto.setInvoiceNumber(
-                consumption.getInvoiceNumber()
-        );
-
-        dto.setBatchNumber(
-                consumption.getBatchNumber()
-        );
-
-        dto.setUsedMetrage(
-                consumption.getUsedMetrage()
-        );
-
-        dto.setSupplier(
-                consumption.getSupplier().name()
-        );
-
-        dto.setLayerQuantity(
-                consumption.getLayerQuantity()
-        );
-
-        dto.setManualBatch(
-                consumption.getManualBatch()
-        );
+        dto.setUsedMetrage(consumption.getUsedMetrage());
+        dto.setSupplier(consumption.getSupplier().name());
+        dto.setLayerQuantity(consumption.getLayerQuantity());
+        dto.setManualBatch(consumption.getManualBatch());
+        dto.setBatchNumber(consumption.getBatchNumber());
 
         if(consumption.getPlate() != null){
-
-            dto.setPlateId(
-                    consumption.getPlate().getId()
-            );
-
+            dto.setPlateId(consumption.getPlate().getId());
             dto.setPlateBatchNumber(
-
                     consumption.getPlate()
                             .getWorkorderid()
                             .getLote()
             );
         }
 
+        // 🔥 NOVO: invoices
+        dto.setInvoices(
+                consumption.getInvoices() != null
+                        ? consumption.getInvoices().stream()
+                        .map(this::mapInvoiceToDTO)
+                        .collect(Collectors.toList())
+                        : List.of()
+        );
+
         return dto;
     }
+
+    private InvoiceItemDTO mapInvoiceToDTO(
+            PlateConsumptionInvoice entity){
+
+        return new InvoiceItemDTO(
+                entity.getInvoice().getInvoiceNumber(),
+                entity.getUsedMetrage()
+        );
+    }
+
+    // ================= DELETE =================
 
     @Transactional
     public void deleteCuttingRecord(Long id){
@@ -377,6 +380,8 @@ public class CuttingRecordService {
         cuttingRecordRepository.delete(record);
     }
 
+    // ================= UPDATE =================
+
     @Transactional
     public CuttingRecordResponseDTO updateCuttingRecord(
             Long id,
@@ -390,7 +395,6 @@ public class CuttingRecordService {
                                 )
                         );
 
-        // 1 Reverter consumos antigos
         for(PlateConsumption consumption :
                 record.getConsumptions()){
 
@@ -413,35 +417,22 @@ public class CuttingRecordService {
             }
         }
 
-        // 2 remover consumos antigos
         plateConsumptionRepository.deleteAll(
                 record.getConsumptions()
         );
 
         record.getConsumptions().clear();
 
-        // 3 atualizar dados base
-        record.setProductionDate(
-                request.getProductionDate()
-        );
-
-        record.setOrderNumber(
-                request.getOrderNumber()
-        );
-
-        record.setOrderDescription(
-                request.getOrderDescription()
-        );
-
+        record.setProductionDate(request.getProductionDate());
+        record.setOrderNumber(request.getOrderNumber());
+        record.setOrderDescription(request.getOrderDescription());
         record.setMaterial(request.getMaterial());
-
         record.setKitType(request.getKitType());
         record.setSeal(request.getSeal());
 
         boolean isAramida =
                 request.getMaterial() == MaterialType.ARAMIDA;
 
-        // 4 recriar consumptions
         for(PlateConsumptionRequestDTO consumptionRequest :
                 request.getConsumptions()){
 
@@ -465,7 +456,6 @@ public class CuttingRecordService {
                             consumptionRequest.getPlateId() != null;
 
             if(usesOperaPlate){
-
                 createPlateEvent(
                         consumptionRequest,
                         consumption
